traces/bug_517.txt
src/bamglib/Mesh2.cpp:668: error: DEAD_STORE
  The value written to &ilast (type int) is never used.
Showing all 1 steps of the trace


src/bamglib/Mesh2.cpp:668:2: Write of unused value
666.   	ba[k] = 0;
667.   // 	if(SHOW) cout << i << " " << j << " " << k << " " << ba[i] << " " << ba[j] << endl;
668.   	ilast=NewItem(t,ba[0],ba[1],ba[2]); }
        ^
669.     }  //  outside departure
670.   
